# iscc-sum

./: .gitattributes  .gitignore  .iscc.json  .isccignore  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  debug_test.py  debug_windows.py  implementationplan.md  index.html  issue.md  mkdocs.yml  projectplan.md  pyproject.toml  restore-crates-publishing-issue.md  sitemap.xml  test_windows_paths.py
.github/workflows/: ci.yml  joss-paper.yml  release-please.yml  release.yml  test-release.yml
changelog/: index.html
developers/: index.html
docs/: changelog.md  cli-spec-py.md  cli-spec-rs.md  developers.md  dirsort-spec.md  index.md  isum-plan.md  quickstart.md  releasing.md  tree-mode-spec.md  treewalk-spec.md  user-guide.md  userguide.md
docs/specifications/: index.md  treewalk.md  wide.md
examples/: README.md  backup-verification.py  quickstart.py
includes/abbreviations/: index.html
paper/: paper.bib  paper.md
quickstart/: index.html
releasing/: index.html
scripts/: build_docs.py  debug_dogfood.py  dogfood.py  normalize_line_endings.py
search/: search_index.json
specifications/: index.html
specifications/cli/: index.html
specifications/treewalk/: index.html
specifications/wide/: index.html
src/: constants.rs  data.rs  instance.rs  lib.rs  main.rs  sum.rs  treewalk.rs
src/iscc_sum/: __init__.py  __main__.py  _core.pyi  cli.py  code_data_ref.py  code_instance_ref.py  code_iscc_sum.py  treewalk.py
tests/: cross_platform.rs  integration_test.rs  test_basic.py  test_cli.py  test_cli_checksum.py  test_cli_coverage.py  test_cli_coverage_edge_cases.py  test_cli_crossplatform.py  test_cli_integration.py  test_cli_tree.py  test_code_data_ref.py  test_code_sum_rust.py  test_constants.py  test_data_code_processor.py  test_distribution.py  test_listdir_upath_comprehensive.py  test_main.py  test_treewalk.py  test_treewalk_vectors.py  test_vectors.json
userguide/: index.html
