[package]
name = "iscc-sum"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Titusz Pan <titusz.pan@gmail.com>"]
description = "High-performance ISCC Data-Code and Instance-Code hashing"
repository = "https://github.com/bio-codes/iscc-sum"
license = "Apache-2.0"
readme = "README.md"
keywords = ["iscc", "hash", "checksum", "content-hash"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[[bin]]
name = "iscc-sum-rs"
path = "src/main.rs"

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py310"] }
rayon = "1.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
