[project]
name = "iscc-sum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Titusz Pan", email = "titusz.pan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
iscc-sum = "iscc_sum:main"

[tool.maturin]
module-name = "iscc_sum._core"
python-packages = ["iscc_sum"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
