[project]
name = "iscc-sum"
version = "0.1.0-alpha.1"
description = "High-performance ISCC Data-Code and Instance-Code hashing"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Titusz Pan", email = "titusz.pan@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bio-codes/iscc-sum"
Repository = "https://github.com/bio-codes/iscc-sum"
Issues = "https://github.com/bio-codes/iscc-sum/issues"

[project.scripts]
iscc-sum = "iscc_sum:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "mypy>=1.0",
    "poethepoet>=0.25.0",
]

[tool.maturin]
module-name = "iscc_sum._core"
python-packages = ["iscc_sum"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
dev-dependencies = [
    "maturin>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["iscc_sum"]
omit = ["tests/*"]

[tool.poe.tasks]
format = { shell = "ruff format . && ruff check --fix ." }
test = "pytest"
typecheck = "mypy src"
coverage = "pytest --cov=iscc_sum --cov-report=term-missing"
